--- a/WSUI.Control/WSUI.Control.csproj
+++ b/WSUI.Control/WSUI.Control.csproj
@@ -41,7 +41,7 @@
     <AssemblyOriginatorKeyFile>WSUIOutlook.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Trial|AnyCPU'">
-    <OutputPath>bin\Trial\</OutputPath>
+    <OutputPath>..\Routput\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
