--- a/WSUI/WSUI.csproj
+++ b/WSUI/WSUI.csproj
@@ -40,8 +40,8 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Trial|AnyCPU'">
-    <OutputPath>bin\Trial\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\Routput\</OutputPath>
+    <DefineConstants>TRACE;TRIAL</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
