--- a/WSUI.CA/WSUI.CA.csproj
+++ b/WSUI.CA/WSUI.CA.csproj
@@ -33,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Trial|x86'">
-    <OutputPath>bin\x86\Trial\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <OutputPath>..\Routput\</OutputPath>
+    <DefineConstants>TRACE;TRIAL</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
