updated: - added  new version of plug in - Trial. NOw we can deploy two versions - Full and Trial;

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -7,14 +7,11 @@
 </configSections>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/></startup><applicationSettings>
         <WSADXPublisher.Properties.Settings>
-            <setting name="installerFile" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\ROutput\OutlookFinderSetup.msi</value>
-            </setting>
             <setting name="publishingLocation" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\Clicktwice</value>
+                <value>h:\Visual\WORK\WSUI\solution\Clicktwice\full</value>
             </setting>
             <setting name="installationUrl" serializeAs="String">
-                <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/</value>
+                <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/full</value>
             </setting>
             <setting name="certificateFile" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
@@ -28,26 +25,35 @@
             <setting name="quietModeDuringUninstall" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="showDownloaderWindow" serializeAs="String">
-                <value>True</value>
-            </setting>
             <setting name="AddInExpressBinFolderPath" serializeAs="String">
                 <value>C:\Program Files (x86)\Add-in Express\Add-in Express for .NET\Bin\</value>
             </setting>
             <setting name="ADXPublisherConfigFilename" serializeAs="String">
                 <value>adxpublisher.exe.config</value>
             </setting>
-            <setting name="downloaderFileName" serializeAs="String">
-                <value>outlookfinder.exe</value>
-            </setting>
             <setting name="targetFrameworkVersion" serializeAs="String">
                 <value>v4.0.30319</value>
             </setting>
             <setting name="targetApplicationNames" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="showRunningApplicationsWarning" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="installerFile" serializeAs="String">
+                <value>h:\Visual\WORK\WSUI\solution\ROutput\OutlookFinderSetup.msi</value>
+            </setting>
+            <setting name="showDownloaderWindow" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="downloaderFileName" serializeAs="String">
+                <value>outlookfinder.exe</value>
+            </setting>
+            <setting name="publishingLocationTrial" serializeAs="String">
+                <value>h:\Visual\WORK\WSUI\solution\Clicktwice\trial</value>
+            </setting>
+            <setting name="installationUrlTrial" serializeAs="String">
+                <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/trial</value>
             </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
