--- a/WSGen/Properties/Settings.settings
+++ b/WSGen/Properties/Settings.settings
@@ -5,9 +5,6 @@
     <Setting Name="BulidNumberFilename" Type="System.String" Scope="Application">
       <Value Profile="(Default)">wsui.number</Value>
     </Setting>
-    <Setting Name="SetupProjectFile" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\1.0.0\WSUI.OutlookPluginSetup(1.0.0).vdproj</Value>
-    </Setting>
     <Setting Name="BuildNumber" Type="System.String" Scope="Application">
       <Value Profile="(Default)">1.0.0</Value>
     </Setting>
@@ -25,6 +22,9 @@
     </Setting>
     <Setting Name="ProductCodeTemplate" Type="System.String" Scope="User">
       <Value Profile="(Default)">"ProductCode" = "8:{0}"</Value>
+    </Setting>
+    <Setting Name="SetupProjectFile" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\WSUI.OutlookPlugin\WSUI.OutlookPluginSetup\Product.wxs</Value>
     </Setting>
   </Settings>
 </SettingsFile>
