updated: - some changes in site; - added logo to standalone application and to the plugin; - fixed #126,#124;

--- a/WSUI/WSUI.csproj
+++ b/WSUI/WSUI.csproj
@@ -210,6 +210,9 @@
       <Name>WSUI.Module</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy $(SolutionDir)Toolkits\ZipLib\ICSharpCode.SharpZipLib.dll $(TargetDir) /F /R /Y /I
