updated: - added finding new version from version_xml; - some other changes;

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -11,7 +11,7 @@
                 <value>h:\Visual\WORK\WSUI\solution\Clicktwice\full</value>
             </setting>
             <setting name="installationUrl" serializeAs="String">
-                <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/full</value>
+                <value>http://outlookfinder.com/downloads/clicktwice/full</value>
             </setting>
             <setting name="certificateFile" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
@@ -53,7 +53,7 @@
                 <value>h:\Visual\WORK\WSUI\solution\Clicktwice\trial</value>
             </setting>
             <setting name="installationUrlTrial" serializeAs="String">
-                <value>http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/trial</value>
+                <value>http://outlookfinder.com/downloads/clicktwice/trial</value>
             </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
