--- a/WSADXPublisher/Properties/Settings.settings
+++ b/WSADXPublisher/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\Clicktwice\full</Value>
     </Setting>
     <Setting Name="installationUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/full</Value>
+      <Value Profile="(Default)">http://outlookfinder.com/downloads/clicktwice/full</Value>
     </Setting>
     <Setting Name="certificateFile" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</Value>
@@ -48,7 +48,7 @@
       <Value Profile="(Default)">C:\Users\Vincent\Documents\GitHub\WSUI\solution\Clicktwice\trial</Value>
     </Setting>
     <Setting Name="installationUrlTrial" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://fruitfactory.github.io/WSSQL_GUI/downloads/clicktwice/trial</Value>
+      <Value Profile="(Default)">http://outlookfinder.com/downloads/clicktwice/trial</Value>
     </Setting>
   </Settings>
 </SettingsFile>
