--- a/WSUI.Site/OutlookFinder/.httpd.conf
+++ b/WSUI.Site/OutlookFinder/.httpd.conf
@@ -11,7 +11,7 @@ LoadModule headers_module "C:\Program Files (x86)\Jcx.Software\VS.Php\2012\apach
 
 <IfDefine PHP_4>
 LoadModule cgi_module "C:\Program Files (x86)\Jcx.Software\VS.Php\2012\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+SetEnv PHPRC "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 ScriptAlias /cgi-bin/ "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/"
 
 AddType application/x-httpd-php .php .php4 .phtml
@@ -21,7 +21,7 @@ Action application/x-httpd-php "/cgi-bin/php.exe"
 #Use the below for CGI mode
 <IfDefine PHP_5_2_CGI>
 LoadModule cgi_module "C:\Program Files (x86)\Jcx.Software\VS.Php\2012\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+SetEnv PHPRC "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 Action application/x-httpd-php "/cgi-bin/php-cgi.exe"
 ScriptAlias /cgi-bin/ "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/"
 AddType application/x-httpd-php .php .php5 .phtml
@@ -33,13 +33,13 @@ AddType application/x-httpd-php .php .php5 .phtml
 LoadFile "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/php5ts.dll"
 LoadModule php5_module "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/php5apache2_2.dll"
 AddType application/x-httpd-php .php .php5 .phtml
-PHPINIDir "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+PHPINIDir "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 </IfDefine>
 
 #Use the below for CGI mode
 <IfDefine PHP_5_3_CGI>
 LoadModule cgi_module "C:\Program Files (x86)\Jcx.Software\VS.Php\2012\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+SetEnv PHPRC "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 Action application/x-httpd-php "/cgi-bin/php-cgi.exe"
 ScriptAlias /cgi-bin/ "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/"
 AddType application/x-httpd-php .php .php5 .phtml
@@ -51,13 +51,13 @@ AddType application/x-httpd-php .php .php5 .phtml
 LoadFile "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/php5ts.dll"
 LoadModule php5_module "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/php5apache2_2.dll"
 AddType application/x-httpd-php .php .php5 .phtml
-PHPINIDir "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+PHPINIDir "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 </IfDefine>
 
 #Use the below for CGI mode
 <IfDefine PHP_5_4_CGI>
 LoadModule cgi_module "C:\Program Files (x86)\Jcx.Software\VS.Php\2012\apache2/modules/mod_cgi.so"
-SetEnv PHPRC "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+SetEnv PHPRC "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 Action application/x-httpd-php "/cgi-bin/php-cgi.exe"
 ScriptAlias /cgi-bin/ "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/"
 AddType application/x-httpd-php .php .php5 .phtml
@@ -69,7 +69,7 @@ AddType application/x-httpd-php .php .php5 .phtml
 LoadFile "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/php5ts.dll"
 LoadModule php5_module "C:/Program Files (x86)/Jcx.Software/VS.Php/2012/PHP 5.2/php5apache2_2.dll"
 AddType application/x-httpd-php .php .php5 .phtml
-PHPINIDir "H:/Visual/WORK/WSUI/solution/WSUI.Site/OutlookFinder/"
+PHPINIDir "H:\Visual\WORK\WSUI\solution\WSUI.Site\OutlookFinder"
 </IfDefine>
 
 DirectoryIndex index.php index.html
