updated: - added project files for PhPStorm and NetBeans; - added new template file for Payment page; - added some requirement files;

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,4 @@ pip-log.txt
 /Toolkits/wsgen.vshost.exe.manifest
 /UpgradeLog.htm
 /WSUI.Site/OutlookFinder/OutlookFinder.puo
+/WSUI.Site/WordPressVersion/nbproject/private/
