--- a/WSUI.Infrastructure/WSUI.Infrastructure.csproj
+++ b/WSUI.Infrastructure/WSUI.Infrastructure.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="Attributes\FieldIndexAttribute.cs" />
     <Compile Include="Behaviors\ChildListBoxBehavior.cs" />
+    <Compile Include="Behaviors\ExpanderEmailBehavior.cs" />
     <Compile Include="Behaviors\MainListBoxBehavior.cs" />
     <Compile Include="Controls\Application\AppEmpty.cs" />
     <Compile Include="Controls\BlockControl\BlockControl.xaml.cs">
