some changes; restoring home url for folders; etc.

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -53,7 +53,7 @@
                 <value>h:\Visual\WORK\WSUI\solution\Clicktwice\trial</value>
             </setting>
             <setting name="installationUrlTrial" serializeAs="String">
-                <value>http://readyshare.routerlogin.net/shares/NetShare/FTP/downloads/clicktwice/trial</value>
+                <value>http://outlookfinder.com/downloads/clicktwice/trial</value>
             </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
