The install files were signed.

--- a/Toolkits/wsadxpublisher.exe.config
+++ b/Toolkits/wsadxpublisher.exe.config
@@ -13,9 +13,6 @@
             <setting name="installationUrl" serializeAs="String">
                 <value>http://outlookfinder.com/downloads/clicktwice/full</value>
             </setting>
-            <setting name="certificateFile" serializeAs="String">
-                <value>h:\Visual\WORK\WSUI\solution\WSUI.OutlookPlugin\wsuiclicktwice.pfx</value>
-            </setting>
             <setting name="iconFileName" serializeAs="String">
                 <value>h:\Visual\WORK\WSUI\solution\WSUI\Search.ico</value>
             </setting>
@@ -54,6 +51,15 @@
             </setting>
             <setting name="installationUrlTrial" serializeAs="String">
                 <value>http://outlookfinder.com/downloads/clicktwice/trial</value>
+            </setting>
+            <setting name="certificateFile" serializeAs="String">
+                <value>h:\Visual\WORK\WSUI\solution\Toolkits\Certificate\mycert.pfx</value>
+            </setting>
+            <setting name="certificatePassword" serializeAs="String">
+                <value>Seattle98</value>
+            </setting>
+            <setting name="timestampUrl" serializeAs="String">
+                <value>http://timestamp.comodoca.com/authenticode</value>
             </setting>
         </WSADXPublisher.Properties.Settings>
     </applicationSettings>
