updated: - added functionality for showing emails with attachment and without; - changed icons; - changed the build script; - added new project for uploading files to ftp after building; - some other minor changes;

--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,5 @@ pip-log.txt
 /UpgradeLog.htm
 /WSUI.Site/OutlookFinder/OutlookFinder.puo
 /WSUI.Site/WordPressVersion/nbproject/private/
+/Toolkits/uploader.vshost.exe
+/Toolkits/uploader.vshost.exe.config
