--- a/WSUI.Module/WSUI.Module.csproj
+++ b/WSUI.Module/WSUI.Module.csproj
@@ -335,6 +335,9 @@
     <Resource Include="Images\People.png" />
     <Resource Include="Images\View.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\mail_attachment.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
