--- a/WSUploader/app.config
+++ b/WSUploader/app.config
@@ -14,19 +14,19 @@
                 <value>h:\Visual\WORK\WSUI\solution\ClickTwice\trial\</value>
             </setting>
             <setting name="FtpServer" serializeAs="String">
-                <value>ftp://213.108.40.45:8888/</value>
+                <value>ftp://213.108.40.45:8888/shares/</value>
             </setting>
             <setting name="Username" serializeAs="String">
                 <value>anonymous</value>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value />
+                <value>yariki@i.ua</value>
             </setting>
             <setting name="RemoteFullPath" serializeAs="String">
-                <value>ftp://213.108.40.45:8888/shares/NetShare/FTP/downloads/clicktwice/full/</value>
+                <value>ftp://213.108.40.45:8888/shares/NetShare/FTP/</value>
             </setting>
             <setting name="RemoteTrialPath" serializeAs="String">
-                <value>ftp://213.108.40.45:8888/shares/NetShare/FTP/downloads/clicktwice/trial/</value>
+                <value>ftp://213.108.40.45:8888/shares/NetShare/FTP/downloads/clicktwice/trial</value>
             </setting>
         </WSUploader.Properties.Settings>
     </applicationSettings>
