--- a/WSUploader/app.config
+++ b/WSUploader/app.config
@@ -14,19 +14,19 @@
                 <value>h:\Visual\WORK\WSUI\solution\ClickTwice\trial\</value>
             </setting>
             <setting name="FtpServer" serializeAs="String">
-                <value>ftp://213.108.40.45:8888/shares/</value>
+                <value>ftp://server40.web-hosting.com/</value>
             </setting>
             <setting name="Username" serializeAs="String">
-                <value>anonymous</value>
+                <value>yaroslav@outlookfinder.com</value>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value>yariki@i.ua</value>
+                <value>7!M^mG_[[_N$</value>
             </setting>
             <setting name="RemoteFullPath" serializeAs="String">
-                <value>ftp://213.108.40.45:8888/shares/NetShare/FTP/</value>
+                <value>downloads/clicktwice/full/</value>
             </setting>
             <setting name="RemoteTrialPath" serializeAs="String">
-                <value>ftp://213.108.40.45:8888/shares/NetShare/FTP/downloads/clicktwice/trial</value>
+                <value>downloads/clicktwice/trial/</value>
             </setting>
         </WSUploader.Properties.Settings>
     </applicationSettings>
