--- a/GflWrapper/GflWrapper.vcxproj
+++ b/GflWrapper/GflWrapper.vcxproj
@@ -64,7 +64,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Toolkits\GflSdk\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\Toolkits\GflSdk\include;$(IncludePath)</IncludePath>
     <OutDir>$(SolutionDir)ROutput\</OutDir>
     <IntDir>$(SolutionDir)ROutput\$(Configuration)\</IntDir>
     <LinkKeyFile>$(ProjectDir)GflWrapperSign.snk</LinkKeyFile>
@@ -78,7 +78,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)ROutput\</OutDir>
     <IntDir>$(SolutionDir)ROutput\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)Toolkits\GflSdk\include;$(IncludePath)</IncludePath>
+    <IncludePath>..\Toolkits\GflSdk\include;$(IncludePath)</IncludePath>
     <LinkKeyFile>$(ProjectDir)GflWrapperSign.snk</LinkKeyFile>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -105,7 +105,7 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>libgfl.lib;libgfle.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)Toolkits\GflSdk\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Toolkits\GflSdk\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -122,7 +122,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Link>
-      <AdditionalLibraryDirectories>$(SolutionDir)Toolkits\GflSdk\lib64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>..\Toolkits\GflSdk\lib64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libgfl.lib;libgfle.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
